--- a/resources/locales/it/thumber.po
+++ b/resources/locales/it/thumber.po
@@ -1,69 +1,76 @@
 # LANGUAGE translation of cakephp-thumber
-# Copyright 2019 Mirko Pagliai <mirko.pagliai@gmail.com>
+# Copyright Mirko Pagliai <mirko.pagliai@gmail.com>
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "POT-Creation-Date: 2019-10-10 15:25+0200\n"
-"PO-Revision-Date: YYYY-mm-DD HH:MM+ZZZZ\n"
-"Last-Translator: NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2019-10-10 15:34+0100\n"
+"Last-Translator: Mirko Pagliai <mirko.pagliai@gmail.com>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language-Team: Italian <>\n"
+"Language: it\n"
 
 #: Command/ClearAllCommand.php:50
 msgid "Clears all thumbnails"
-msgstr ""
+msgstr "Cancella tutte le miniature"
 
 #: Command/ClearAllCommand.php:65
 #: Command/ClearCommand.php:69
 msgid "Error deleting thumbnails"
-msgstr ""
+msgstr "Errore cancellando le miniature"
 
 #: Command/ClearAllCommand.php:69
 #: Command/ClearCommand.php:73
 msgid "Thumbnails deleted: {0}"
-msgstr ""
+msgstr "Miniature cancellate: {0}"
 
 #: Command/ClearCommand.php:50
 msgid "Clears all thumbnails that have been generated from an image path"
 msgstr ""
+"Cancella tutte le miniature che sono state generate dalla path di un'immagine"
 
 #: Command/ClearCommand.php:52
 msgid "Path of the original image"
-msgstr ""
+msgstr "Path dell'immagine originale"
 
 #: Routing/Middleware/ThumbnailMiddleware.php:35
 msgid "File `{0}` doesn't exist"
-msgstr ""
+msgstr "Il file `{0}` non esiste"
 
 #: Utility/ThumbCreator.php:55
 msgid "Image type `{0}` is not supported by this driver"
-msgstr ""
+msgstr "Il tipo di immagine `{0}` non è supportato da questo driver"
 
 #: Utility/ThumbCreator.php:58
 msgid "Unable to read image from file `{0}`"
-msgstr ""
+msgstr "Impossibile leggere l'immagine dal file `{0}`"
 
 #: Utility/ThumbCreator.php:74
-msgid "Missing path of the generated thumbnail. Probably the `{0}` method has not been invoked"
+msgid ""
+"Missing path of the generated thumbnail. Probably the `{0}` method has not"
+" been invoked"
 msgstr ""
+"Path della miniatura generata mancante. Probabilmente il metodo `{0}` non è"
+" stato invocato"
 
 #: Utility/ThumbCreator.php:94
 msgid "No valid method called before the `{0}` method"
-msgstr ""
+msgstr "Nessun metodo valido chiamato prima del metodo `{0}`"
 
 #: Utility/ThumbCreator.php:96
 msgid "Unable to create file `{0}`"
-msgstr ""
+msgstr "Impossibile creare il file `{0}`"
 
 #: View/Helper/ThumbHelper.php:62
 msgid "Thumbnail path is missing"
-msgstr ""
+msgstr "La path della miniatura è mancante"
 
 #: View/Helper/ThumbHelper.php:105
 msgid "Method `{0}::{1}()` does not exist"
-msgstr ""
+msgstr "Il metodo `{0}::{1}()` non esiste"
+
 
